# dory

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: embeddings_usage.py
examples/docker/: env.example
src/dory/: __init__.py  config.py  memory.py  messages.py  models.py  types.py
src/dory/adapters/: __init__.py  base.py  in_memory.py  mongo.py  utils.py
src/dory/embeddings/: __init__.py  builders.py  config.py  service.py
src/dory/embeddings/adapters/: __init__.py  base.py  mem0.py
src/dory/models/: conversation.py  message.py
src/dory/summaries/: __init__.py  service.py
src/dory/summaries/adapters/: mongo.py
src/dory/summaries/models/: action.py  usersummary.py
src/dory/users_summaries/: __init__.py  service.py
src/dory/users_summaries/prompt_modules/: user_summary_generation.py
src/dory/usersummaries/: __init__.py
src/dory/usersummaries/models/: __init__.py
tests/: conftest.py  test_errors_and_limits.py  test_in_memory_adapter.py  test_messages_facade.py  test_mongo_adapter.py  test_types.py
tests/embeddings/: conftest.py  test_builders.py  test_integration.py  test_mem0_adapter.py
tests/summaries/: test_in_memory_adapter.py
tests/users_summaries/: test_user_summary_agent.py  test_user_summary_service.py
tests/usersummaries/: test_in_memory_adapter.py
