[project]
name = "dory"
dynamic = ["version"]
description = "A library for managing conversation history in AI-powered applications for reusability across projects."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Kopiloto Team", email = "kopiloto@kavak.com" }]
dependencies = []
license = { text = "MIT" }
keywords = ["ai", "conversation", "messages", "mongodb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dory"]

[tool.hatch.version]
path = "src/dory/__init__.py"

[dependency-groups]
dev = ["mypy>=1.16.0", "ruff>=0.11.12", "types-requests>=2.32.0.20250515"]

[project.scripts]
dory = "dory:main"

[project.optional-dependencies]
linting = ["ruff", "mypy", "types-requests"]
